--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -11,7 +11,10 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
 
@@ -36,4 +39,4 @@ jobs:
       run: cargo +1.40.0 check --all --bins --examples
 
     - name: tests
-      run: cargo +1.40.0 test --all 
+      run: cargo +1.40.0 test --all
