--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,6 +1,6 @@
 name: Build and Test
 
-on: 
+on:
   pull_request:
   push:
 
@@ -9,29 +9,32 @@ env:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        rust: [1.40.0, stable]
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
 
-    - name: check
-      run: cargo check --all --bins --examples
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ matrix.rust }}
+        override: true
+        components: rustfmt, clippy
 
-    - name: tests
-      run: cargo test --all 
+    - uses: actions-rs/cargo@v1
+      with:
+        command: check
+        args: --all --all-targets
 
-    - name: fmt
-      run: cargo fmt --all -- --check
+    - uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --all --all-targets
 
-  min-supported:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: install
-      run: rustup install 1.40.0
-
-    - name: check
-      run: cargo +1.40.0 check --all --bins --examples
-
-    - name: tests
-      run: cargo +1.40.0 test --all 
+    - uses: actions-rs/cargo@v1
+      # Doesn't work
+      # if: matrix.rust == 'stable'
+      with:
+        command: fmt
+        args: --all -- --check
