--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,4 +32,7 @@ default-target = "x86_64-pc-windows-msvc"
 members = [
     "macros",
     "macros/support",
+    "examples/basic/client",
+    "examples/basic/interface",
+    "examples/basic/server",
 ]
